--- a/index.html
+++ b/index.html
@@ -2,80 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Test My GPT Bot</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Colossal Squid GPT Demo</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #eaf0f6, #ffffff);
-      color: #333;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 80px 20px;
+      font-family: 'Outfit', sans-serif;
+      background: linear-gradient(120deg, #1b1f3a, #3a4660);
+      color: #ffffff;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      justify-content: center;
+      align-items: center;
       text-align: center;
+      overflow-x: hidden;
     }
-
     h1 {
       font-size: 3rem;
+      font-weight: 800;
       margin-bottom: 20px;
-      color: #1a1a1a;
     }
-
     p {
       font-size: 1.2rem;
-      line-height: 1.6;
       max-width: 700px;
-      margin: 0 auto 40px;
+      margin-bottom: 40px;
+      opacity: 0.9;
     }
-
-    .cta-button {
-      display: inline-block;
-      background-color: #0077cc;
-      color: white;
-      padding: 15px 30px;
+    .button {
+      background-color: #00c2ff;
+      color: #000;
+      padding: 16px 36px;
       font-size: 1.1rem;
-      border-radius: 8px;
-      text-decoration: none;
+      font-weight: 600;
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
       transition: background 0.3s ease;
+      text-decoration: none;
     }
-
-    .cta-button:hover {
-      background-color: #005fa3;
+    .button:hover {
+      background-color: #00a3d3;
     }
-
     footer {
-      text-align: center;
+      margin-top: auto;
+      padding: 30px;
       font-size: 0.9rem;
-      margin-top: 60px;
-      color: #888;
+      color: #aaa;
+    }
+    .glow {
+      text-shadow: 0 0 10px rgba(0, 194, 255, 0.7);
     }
   </style>
 </head>
 <body>
+  <main>
+    <h1 class="glow">Talk to a GPT bot trained on a single source</h1>
+    <p>
+      This bot only knows what’s on the Wikipedia page about the colossal squid. Ask it anything — no hallucinations, no BS. Just precise, focused answers from a custom GPT.
+    </p>
+    <a href="#" class="button">Start the chat below</a>
+  </main>
 
-  <div class="container">
-    <h1>Talk to a custom GPT bot</h1>
-    <p>This chatbot is trained only on the Wikipedia page about the colossal squid.<br>
-    Ask anything about its size, anatomy, behavior or habitat — and see how it answers without hallucinating.</p>
+  <footer>
+    Built with ❤️ using OpenAI and Lovable | Demo by migiwara5
+  </footer>
 
-    <a href="#" class="cta-button">Click the chat icon below to start</a>
-
-    <footer>
-      Built with ❤️ by a GPT enthusiast — powered by OpenAI & Lovable
-    </footer>
-  </div>
-
-  <!-- Replace with your actual bot ID -->
+  <!-- Lovable GPT bot script -->
   <script
     src="https://plug-in-chat-gpt.lovable.app/widget.js"
     id="lovable-chat-widget"
     data-id="TON-BOT-ID-ICI">
   </script>
-
 </body>
 </html>
