--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-XXXXXXX'); // Replace G-XXXXXXX with your Google Analytics ID
+    gtag('config', 'G-XXXXXXX');
   </script>
   <style>
     * {
@@ -43,24 +43,24 @@
       margin-bottom: 40px;
       opacity: 0.9;
     }
-    .examples {
+    .examples, .usecases {
       background-color: rgba(255, 255, 255, 0.05);
       padding: 30px;
       border-radius: 12px;
       margin-top: 30px;
       text-align: left;
-      max-width: 600px;
+      max-width: 700px;
     }
-    .examples h2 {
+    .examples h2, .usecases h2 {
       font-size: 1.4rem;
       margin-bottom: 10px;
       color: #00c2ff;
     }
-    .examples ul {
+    .examples ul, .usecases ul {
       list-style-type: disc;
       padding-left: 20px;
     }
-    .examples li {
+    .examples li, .usecases li {
       margin-bottom: 10px;
       font-size: 1rem;
     }
@@ -79,6 +79,20 @@
     .button:hover {
       background-color: #00a3d3;
     }
+    .lang-switch {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+    }
+    .lang-switch button {
+      background: #00c2ff;
+      border: none;
+      color: #000;
+      padding: 10px 16px;
+      border-radius: 20px;
+      font-weight: 600;
+      cursor: pointer;
+    }
     footer {
       margin-top: auto;
       padding: 30px;
@@ -91,20 +105,35 @@
   </style>
 </head>
 <body>
+  <div class="lang-switch">
+    <button onclick="toggleLanguage()">FR / EN</button>
+  </div>
+
   <main>
-    <h1 class="glow">Talk to a GPT bot trained on a single source</h1>
-    <p>
+    <h1 class="glow" id="title">Talk to a GPT bot trained on a single source</h1>
+    <p id="subtitle">
       This bot only knows what’s on the Wikipedia page about the colossal squid. Ask it anything — no hallucinations, no BS. Just precise, focused answers from a custom GPT.
     </p>
-    <a href="#" class="button">Start the chat below</a>
+    <a href="#" class="button" id="cta">Start the chat below</a>
 
     <div class="examples">
-      <h2>Try asking:</h2>
-      <ul>
+      <h2 id="examples-title">Try asking:</h2>
+      <ul id="examples-list">
         <li>How big can the colossal squid get?</li>
         <li>Where does it live?</li>
         <li>How is it different from the giant squid?</li>
         <li>What are its predators?</li>
+      </ul>
+    </div>
+
+    <div class="usecases">
+      <h2 id="usecases-title">What could you use this for?</h2>
+      <ul id="usecases-list">
+        <li><strong>Local bakery:</strong> Let customers ask about opening hours, ingredients, allergens, or today’s menu.</li>
+        <li><strong>Online shop:</strong> Train the bot on your product catalog or FAQ to provide instant, reliable support.</li>
+        <li><strong>Consulting agency:</strong> Upload your methodology or service brochure and let the bot answer client questions.</li>
+        <li><strong>Internal team support:</strong> Turn an internal process PDF into a smart helpdesk bot.</li>
+        <li><strong>Event booth or landing page:</strong> Replace your static PDF with a smart assistant that interacts.</li>
       </ul>
     </div>
   </main>
@@ -118,6 +147,80 @@
     src="https://plug-in-chat-gpt.lovable.app/widget.js"
     id="lovable-chat-widget"
     data-id="TON-BOT-ID-ICI">
+  </script>
+
+  <script>
+    const content = {
+      en: {
+        title: "Talk to a GPT bot trained on a single source",
+        subtitle: "This bot only knows what’s on the Wikipedia page about the colossal squid. Ask it anything — no hallucinations, no BS. Just precise, focused answers from a custom GPT.",
+        cta: "Start the chat below",
+        examplesTitle: "Try asking:",
+        examples: [
+          "How big can the colossal squid get?",
+          "Where does it live?",
+          "How is it different from the giant squid?",
+          "What are its predators?"
+        ],
+        usecasesTitle: "What could you use this for?",
+        usecases: [
+          "Local bakery: Let customers ask about opening hours, ingredients, allergens, or today’s menu.",
+          "Online shop: Train the bot on your product catalog or FAQ to provide instant, reliable support.",
+          "Consulting agency: Upload your methodology or service brochure and let the bot answer client questions.",
+          "Internal team support: Turn an internal process PDF into a smart helpdesk bot.",
+          "Event booth or landing page: Replace your static PDF with a smart assistant that interacts."
+        ]
+      },
+      fr: {
+        title: "Parlez à un chatbot GPT formé sur un seul document",
+        subtitle: "Ce bot connaît uniquement le contenu de la page Wikipédia sur le calmar colossal. Posez vos questions — pas d'hallucinations, pas de bla-bla. Juste des réponses précises et fiables.",
+        cta: "Lancer la discussion en bas",
+        examplesTitle: "Exemples de questions :",
+        examples: [
+          "Quelle est la taille maximale du calmar colossal ?",
+          "Où vit-il ?",
+          "Quelle est la différence avec le calmar géant ?",
+          "Quels sont ses prédateurs ?"
+        ],
+        usecasesTitle: "À quoi cela peut-il servir ?",
+        usecases: [
+          "Boulangerie : permettre aux clients de poser des questions sur les horaires, les ingrédients ou les allergènes.",
+          "Boutique en ligne : entraîner le bot sur votre catalogue ou FAQ pour un support rapide et précis.",
+          "Agence de conseil : téléchargez votre offre et laissez le bot répondre aux questions des clients.",
+          "Support interne : transformez un document de procédure en assistant intelligent.",
+          "Salon ou landing page : remplacez votre PDF statique par un assistant interactif."
+        ]
+      }
+    };
+
+    let currentLang = 'en';
+
+    function toggleLanguage() {
+      currentLang = currentLang === 'en' ? 'fr' : 'en';
+      const lang = content[currentLang];
+
+      document.getElementById('title').textContent = lang.title;
+      document.getElementById('subtitle').textContent = lang.subtitle;
+      document.getElementById('cta').textContent = lang.cta;
+      document.getElementById('examples-title').textContent = lang.examplesTitle;
+      document.getElementById('usecases-title').textContent = lang.usecasesTitle;
+
+      const examplesList = document.getElementById('examples-list');
+      examplesList.innerHTML = '';
+      lang.examples.forEach(e => {
+        const li = document.createElement('li');
+        li.textContent = e;
+        examplesList.appendChild(li);
+      });
+
+      const usecasesList = document.getElementById('usecases-list');
+      usecasesList.innerHTML = '';
+      lang.usecases.forEach(e => {
+        const li = document.createElement('li');
+        li.innerHTML = e;
+        usecasesList.appendChild(li);
+      });
+    }
   </script>
 </body>
 </html>
